Fresh Staging build

--- a/public/assets/iwnad.css
+++ b/public/assets/iwnad.css
@@ -67,16 +67,19 @@ input {
 }
 
 ::placeholder {
-    color: gray;
-    opacity: 1; /* Firefox */
+  color: gray;
+  opacity: 1;
+  /* Firefox */
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color: gray;
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: gray;
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
-   color: gray;
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: gray;
 }
 
 .submit-button {
@@ -265,14 +268,12 @@ input {
 
 .dashboard-background {
   height: 600px;
-    background-image:
-    linear-gradient(
-      #FAEEEE,
-      #FAEEEE 35%,
-      #ffffff 15%,
-      #ffffff 85%,
-      #ffffff 35%
-    );
+  background-image:
+    linear-gradient(#FAEEEE,
+    #FAEEEE 35%,
+    #ffffff 15%,
+    #ffffff 85%,
+    #ffffff 35%);
 }
 
 .match-card {
