--- a/public/assets/iwnad.css
+++ b/public/assets/iwnad.css
@@ -1,10 +1,74 @@
+.ember-modal-dialog {
+  z-index: 51;
+  position: fixed;
+}
+.ember-modal-dialog.emd-in-place {
+  position: static;
+}
+
+.ember-modal-wrapper.emd-static.emd-wrapper-target-attachment-center .ember-modal-dialog {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.ember-modal-wrapper.emd-animatable.emd-wrapper-target-attachment-center {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ember-modal-wrapper.emd-animatable.emd-wrapper-target-attachment-center .ember-modal-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ember-modal-wrapper.emd-animatable .ember-modal-dialog {
+  position: relative;
+}
+
+.ember-modal-overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 50;
+}
+
+.ember-modal-dialog {
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 0 10px #222;
+  padding: 10px;
+}
+
+.ember-modal-overlay.translucent {
+  background-color: rgba(128, 128, 128, 0.77);
+}
+
+@font-face {
+  font-family: "Musket bold";
+  src: url("/assets/Musket bold.otf");
+}
+@font-face {
+  font-family: "Musket regular";
+  src: url("/assets/Musket regular.otf");
+}
 body {
-  font-family: 'Muli', serif;
+  font-family: "Muli" !important;
 }
 
 .header {
-  background-color: #1B2932;
+  background-color: #182330;
   color: white;
+  padding-right: 5% !important;
+  padding-left: 5% !important;
 }
 
 .nav-link {
@@ -12,16 +76,15 @@ body {
 }
 
 .navbar-brand {
-  margin-right: 10px;
+  margin-right: 10px !important;
+  font-family: "Musket bold";
+  font-size: 25pt !important;
 }
 
 .welcome {
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-top: 100px;
-  padding-bottom: 100px;
   width: 100%;
-  background-color: #F9F6F6;
+  height: 500px;
+  background-image: linear-gradient(#182330, #182330 97.5%, #ffffff 2.5%, #ffffff 2.5%, #ffffff 97.5%);
 }
 
 .component-padding {
@@ -32,31 +95,95 @@ body {
   width: 100%;
 }
 
+.large-musket-text {
+  font-family: "Musket bold";
+  font-size: 30pt;
+  color: white;
+}
+
+.large-musket-text-pink {
+  font-family: "Musket bold";
+  font-size: 30pt;
+  color: #FFABB4;
+}
+
+.large-musket-text-dark-blue {
+  font-family: "Musket bold";
+  font-size: 30pt;
+  color: #182330;
+}
+
+.medium-musket-text-pink {
+  font-family: "Musket bold";
+  font-size: 25pt;
+  color: #FFABB4;
+}
+
+.medium-regular-musket-text-pink {
+  font-family: "Musket regular";
+  font-size: 25pt;
+  color: #FFABB4;
+}
+
+.medium-musket-text-white {
+  font-family: "Musket bold";
+  font-size: 25pt;
+  color: white;
+}
+
+.medium-musket-text-blue {
+  font-family: "Musket bold";
+  font-size: 15pt;
+  color: #568DFF;
+}
+
+.large-musket-text-blue {
+  font-family: "Musket bold";
+  font-size: 30pt;
+  color: #568DFF;
+}
+
 .large-text {
   color: #E36364;
 }
 
 .large-blue-text {
-  color: #1B2932;
+  color: #182330;
+}
+
+.medium-white-text {
+  color: white;
+  font-size: 15pt;
+  line-height: 1.2;
 }
 
 .medium-text {
-  color: #1B2932;
+  color: #182330;
 }
 
 .small-text {
   color: #5E666D;
 }
 
+.small-text-pink {
+  color: #FFABB4;
+}
+
+.small-text-white {
+  color: white;
+}
+
 .extra-large-blue-text {
-  color: #1B2932;
+  color: #182330;
   font-size: 55pt;
   font-weight: 650;
 }
 
-.login-text {
+.welcome-text {
+  padding-left: 20%;
   padding-right: 10%;
-  padding-left: 10%;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 input {
@@ -82,12 +209,70 @@ input {
   color: gray;
 }
 
+.email-subscribe-box {
+  background-color: white;
+  width: 70%;
+  height: 40px !important;
+  padding-left: 5px;
+  padding-right: 5px;
+  float: left;
+}
+
+.subscribe-button {
+  background-color: #FF583E;
+  border: none;
+  color: white;
+  height: 40px;
+  width: 25%;
+  float: left;
+  margin-left: 7px;
+}
+
+.register-button {
+  background-color: #FF583E;
+  border: none;
+  color: white;
+  height: 40px;
+  width: 200px;
+  margin-left: 7px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .submit-button {
-  background-color: #1B2932;
+  background-color: #182330;
   border: none;
   color: white;
   height: 50px;
   width: 100px;
+}
+
+.update-button {
+  background-color: #182330;
+  border: none;
+  color: white;
+  height: 50px;
+  width: 200px;
+}
+
+.yes-button {
+  background-color: #182330;
+  margin: 5%;
+  width: 40%;
+  color: white;
+  height: 50px;
+  border: none;
+  float: left;
+}
+
+.no-button {
+  background-color: #FF583E;
+  margin: 5%;
+  width: 40%;
+  color: white;
+  height: 50px;
+  border: none;
+  float: left;
 }
 
 .button-div {
@@ -127,7 +312,7 @@ input {
 }
 
 .upload-csv-button {
-  background-color: #1B2932;
+  background-color: #182330;
   border: none;
   color: white;
   height: 50px;
@@ -135,7 +320,7 @@ input {
 }
 
 .footer {
-  background-color: #1B2932;
+  background-color: #182330;
   padding-right: 8%;
   padding-top: 15px;
   width: 100%;
@@ -143,6 +328,10 @@ input {
   color: #BBBEC1;
   text-align: right;
   font-weight: 700;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .dashboard-module {
@@ -174,7 +363,17 @@ input {
 }
 
 .module-active-right-bar {
-  border-right: 1px solid #1B2932;
+  border-right: 1px solid #182330;
+}
+
+.module-inactive-header {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: auto;
+  border: 5px solid #FAEEEE;
+  border-bottom: 2px solid #FAEEEE;
 }
 
 .module-inactive {
@@ -182,13 +381,16 @@ input {
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
-  border: 5px solid #FAEEEE;
+  margin: auto;
   margin-bottom: 40px;
+  border: 5px solid #FAEEEE;
+  border-top: none;
 }
 
 .button-text {
   color: #EA9C9C;
   font-weight: 600;
+  cursor: default;
   text-align: right;
 }
 
@@ -230,6 +432,16 @@ input {
   color: #FF7474 !important;
 }
 
+.content-not-editable-location {
+  border: none;
+  height: 50px;
+  line-height: 50px;
+  padding-right: 7px;
+  padding-left: 0 !important;
+  font-size: 32pt;
+  color: #FF7474 !important;
+}
+
 .content-editable-role {
   border: none;
   height: 50px;
@@ -238,7 +450,14 @@ input {
   padding-right: 0 !important;
   font-size: 32pt;
   color: #FF7474 !important;
-  text-align: right;
+}
+
+.content-not-editable-role {
+  border: none;
+  height: 50px;
+  line-height: 50px;
+  font-size: 32pt;
+  color: #FF7474 !important;
 }
 
 .content-editable {
@@ -246,8 +465,42 @@ input {
   border: none;
   height: 50px;
   line-height: 50px;
-  padding-left: 7px;
-  padding-right: 7px;
+  padding-left: 10px;
+}
+
+.content-not-editable {
+  border: none;
+  height: 50px;
+  line-height: 50px;
+}
+
+.profile-info-header {
+  width: 70%;
+  margin: auto;
+}
+
+.profile-info {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 100px;
+  width: 100%;
+}
+
+.profile-pic-box {
+  padding-left: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.profile-pic {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
+
+.name-and-role-box {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .update-button-div {
@@ -263,17 +516,14 @@ input {
   height: 50px;
   line-height: 50px;
   text-align: center !important;
-  padding: 0 !important;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 
 .dashboard-background {
+  font-family: "Muli" !important;
   height: 600px;
-  background-image:
-    linear-gradient(#FAEEEE,
-    #FAEEEE 35%,
-    #ffffff 15%,
-    #ffffff 85%,
-    #ffffff 35%);
+  background-image: linear-gradient(#FAEEEE, #FAEEEE 35%, #ffffff 15%, #ffffff 85%, #ffffff 35%);
 }
 
 .match-card {
@@ -281,4 +531,63 @@ input {
   margin: 5px;
   padding: 20px;
   background-color: white;
+}
+
+.ember-modal-dialog {
+  border-radius: 0;
+  text-align: center;
+  padding: 45px;
+  color: #182330;
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 300px;
+  padding: 10px;
+  background-color: #F0F1F1;
+}
+
+.cancel-button {
+  border-radius: 50%;
+  background-color: #FAEEEE;
+  color: #182330;
+  width: 30px;
+  height: 30px;
+  float: right;
+  text-align: center;
+  line-height: 30px;
+}
+
+.makeathon {
+  width: 70%;
+  text-align: center;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.mentorship {
+  background-color: #568DFF;
+  color: white;
+}
+
+.mentorship-sub {
+  width: 70%;
+  margin: auto;
+  padding-top: 100px;
+}
+
+.contact {
+  background-color: #F0F1F1;
+}
+
+.contact-sub {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  width: 70%;
+  margin: auto;
+}
+
+.resources-section {
+  height: 300px;
 }
